--- a/examples/ligo.html
+++ b/examples/ligo.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="../node_modules/jqwidgets-framework/jqwidgets/styles/jqx.fresh.css" />
     <link rel="stylesheet" href="../node_modules/ni-webcharts-legends/styles/webcharts-legends.icons.css" />
     <link rel="stylesheet" href="../node_modules/ni-webcharts-legends/styles/webcharts-legends.css" />
+    <link rel="stylesheet" href="../fiftyShadesOfPink.css" />
 
     <link rel="import" href="../node_modules/ni-webcharts/dist/webcharts.min.html"/>
     <link rel="import" href="../node_modules/ni-webcharts-legends/dist/webcharts-legends.min.html"/>
 
     <script type="text/javascript" src="../node_modules/webcomponentsjs/lite.js"></script>
-
     <script type="text/javascript" src="../node_modules/pako/dist/pako.min.js"></script>
 
 
@@ -43,16 +43,6 @@
         .asd ni-plot-legend .jqx-expander-content {
             border: 1px solid #cacdd5;
             border-top: 0px;
-        }
-
-        .story {
-            font-family: Verdana;
-            font-size: 11px;
-            color: #555555;
-            line-height: 1.5;
-            letter-spacing: .25px;
-            margin-top: 44px;
-            margin-bottom: 18px;
         }
 
         .originalSignal {
@@ -151,26 +141,26 @@
 
 <body>
     <div id="page-wrap">
-        <h1>The GW150914 event recorded by Laser Interferometer Gravitational-wave Observatory</h1>
+        <h1 class="customTitle">The GW150914 event recorded by Laser Interferometer Gravitational-wave Observatory</h1>
 
-        <p class="story">
+        <p class="paragraph">
             This is the theoretical model:
         </p>
-        <div class="theoreticalTemplate">
+        <div class="theoreticalTemplate" >
             <ni-cartesian-graph id="graph0" ni-control-id="26" value="[]">
                 <ni-cartesian-axis show show-label show-tick-labels="none" auto-scale="exact" label="Time" axis-position="bottom"></ni-cartesian-axis>
                 <ni-cartesian-axis show show-label show-tick-labels="none" auto-scale="exact" label="Strain" axis-position="left"></ni-cartesian-axis>
                 <ni-cartesian-plot show label="Theoretical template">
-                    <ni-cartesian-plot-renderer line-width="1" line-stroke="rgb(203,75,75)"></ni-cartesian-plot-renderer>
+                    <ni-cartesian-plot-renderer line-stroke="rgb(184,186,214)" line-width="1"></ni-cartesian-plot-renderer>
                 </ni-cartesian-plot>
             </ni-cartesian-graph>
         </div>
 
-        <p class="story">
+        <p class="paragraph">
             This graph shows the raw data recorded by the Hanford, Washington and Livingston, Lousiana Observatories of a gravitational wave sampled at 4096 Hz.
             It is also demonstating the legends and tools of the webcharts.
         </p>
-        <p class="story">
+        <p class="paragraph">
             This is a 32 seconds long fragment of the original signal recorded by both the Hanford and Livingston Observatories sampled at 4096 Hz.
         </p>
         <div class="originalSignal">
@@ -179,16 +169,16 @@
                 <ni-cartesian-axis axis-ref="b" show show-ticks show-minor-ticks show-label auto-scale="exact" label="H Strain" axis-position="left" format="LVSI" grid-lines></ni-cartesian-axis>
                 <ni-cartesian-axis axis-ref="c" show show-ticks show-minor-ticks show-label auto-scale="exact" label="L Strain" axis-position="right" format="LVSI" axis-ref = "L"></ni-cartesian-axis>
                 <ni-cartesian-plot xaxis="a" yaxis="b" show label="Hanford Observatory">
-                    <ni-cartesian-plot-renderer line-width="1" line-stroke="rgb(237,194,64)"></ni-cartesian-plot-renderer>
+                    <ni-cartesian-plot-renderer line-width="1" line-stroke="rgb(184,186,214)"></ni-cartesian-plot-renderer>
                 </ni-cartesian-plot>
                 <ni-cartesian-plot xaxis="a" yaxis="c" show label="Livingston Observatory" yaxis = "L">
-                    <ni-cartesian-plot-renderer line-width="1" line-stroke="rgb(175,216,248)"></ni-cartesian-plot-renderer>
+                    <ni-cartesian-plot-renderer line-width="1" line-stroke="rgb(210, 180, 180)"></ni-cartesian-plot-renderer>
                 </ni-cartesian-plot>
             </ni-cartesian-graph>
             <ni-graph-tools ni-control-id='38' graph-name='28'></ni-graph-tools>
             <ni-plot-legend ni-control-id='36' graph-name='28'></ni-plot-legend>
         </div>
-        <p class="story">
+        <p class="paragraph">
             Amplitude spectral density:
         </p>
         <div class="asd">
@@ -199,13 +189,13 @@
                     <ni-cartesian-plot-renderer bar-fill="rgb(237,194,64)"></ni-cartesian-plot-renderer>
                 </ni-cartesian-plot-->
                 <ni-cartesian-plot show label="Livingston Observatory">
-                    <ni-cartesian-plot-renderer bar-fill="rgb(175,216,248)" line-stroke></ni-cartesian-plot-renderer>
+                    <ni-cartesian-plot-renderer bar-fill="rgb(184,186,214)" line-stroke></ni-cartesian-plot-renderer>
                 </ni-cartesian-plot>
             </ni-cartesian-graph>
             <!-- cursors + bar-fill don't play well together -->
             <ni-plot-legend ni-control-id='36' graph-name='30'></ni-plot-legend>
         </div>
-        <p class="story">
+        <p class="paragraph">
             Whitened and [20, 300] Hz bandpass filter:
         </p>
         <div class="whitened">
@@ -219,35 +209,35 @@
                 <ni-cartesian-axis axis-position="left" auto-scale="none" minimum="-4" maximum="4" label="Whitened Strain" axis-position="left" format="LVSI" grid-lines="false" axis-ref="yaxis2ref"></ni-cartesian-axis>
                 <ni-cartesian-axis axis-position="left" auto-scale="none" minimum="-4" maximum="4" label="Whitened Strain" axis-position="left" format="LVSI" grid-lines="false" axis-ref="yaxis3ref"></ni-cartesian-axis>
 
-                <ni-cartesian-plot show label="Hanford Observatory" xaxis="xaxis1ref" yaxis="yaxis1ref">
-                    <ni-cartesian-plot-renderer line-width="1" line-stroke="rgb(237,194,64)"></ni-cartesian-plot-renderer>
+                <ni-cartesian-plot  show label="Hanford Observatory" xaxis="xaxis1ref" yaxis="yaxis1ref">
+                    <ni-cartesian-plot-renderer line-width="1" line-stroke="rgb(210, 180, 180)"></ni-cartesian-plot-renderer>
                 </ni-cartesian-plot>
                 <ni-cartesian-plot show label="Livingston Observatory" xaxis="xaxis2ref" yaxis="yaxis2ref">
-                    <ni-cartesian-plot-renderer line-width="1" line-stroke="rgb(175,216,248)"></ni-cartesian-plot-renderer>
+                    <ni-cartesian-plot-renderer line-width="1" line-stroke="rgb(184,186,214)"></ni-cartesian-plot-renderer>
                 </ni-cartesian-plot>
                 <ni-cartesian-plot show label="Theoretical model" xaxis="xaxis3ref" yaxis="yaxis3ref">
-                    <ni-cartesian-plot-renderer line-width="1" line-stroke="rgb(203,75,75)"></ni-cartesian-plot-renderer>
+                    <ni-cartesian-plot-renderer line-width="1" line-stroke="rgb(203,75,203)"></ni-cartesian-plot-renderer>
                 </ni-cartesian-plot>
 
             </ni-cartesian-graph>
                 <!-- cursors + bar-fill don't play well together -->
             <ni-plot-legend ni-control-id='36' graph-name='32'></ni-plot-legend>
         </div>
-        <p class="story">
+        <p class="paragraph">
             The next graph is the spectrogram of the whitened signal recorded by the Handford Observatory zoomed in around the moment of the merging of the two black holes.
         </p>
         <div class="spectrogram">
             <ni-intensity-graph id="intensity1" ni-control-id="50">
               <ni-cartesian-axis show show-ticks show-minor-ticks show-tick-labels="none" grid-lines show-label label="Time" axis-position="bottom" minimum="2300" maximum="2800" auto-scale='none'></ni-cartesian-axis>
               <ni-cartesian-axis show show-ticks show-minor-ticks show-tick-labels="none" show-endpoints grid-lines show-label label="Frequency (Hz)" axis-position="left"  minimum="0" maximum="30" auto-scale='none'></ni-cartesian-axis>
-              <ni-color-scale show show-tick-labels="endpoints" auto-scale="none" markers='[{"value":-11,"color":"rgba(255,0,0,1)"},{"value":-6,"color":"rgba(255,0,0,1)"},{"value":-1.5,"color":"rgba(255,242,0,1)"}]'></ni-color-scale>
+              <ni-color-scale show show-tick-labels="endpoints" auto-scale="none" markers='[{"value":-11,"color":"rgba(210, 180, 180,1)"},{"value":-6,"color":"rgba(0,0,0,1)"},{"value":-1.5,"color":"rgba(184,186,214,1)"}]'></ni-color-scale>
             </ni-intensity-graph>
         </div>
-        <p class="story">
+        <p class="paragraph">
             The signal is in the hearing range. Click <a class="button" onclick="playSound()">here</a> to listen to it.
         </p>
-        <p class="story">
-            Read more <a href="https://en.wikipedia.org/wiki/GW151226">here</a>
+        <p class="paragraph">
+            Read more <a class="hyperlink" href="https://en.wikipedia.org/wiki/GW151226">here</a>
             and <a href="https://losc.ligo.org/s/events/GW150914/GW150914_tutorial.html">here</a>.
         </p>
     </div>
